Spinner Display corrected; imgur completed

--- a/app/src/main/res/layout/item_gallery_search.xml
+++ b/app/src/main/res/layout/item_gallery_search.xml
@@ -1,51 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
+  xmlns:app="http://schemas.android.com/apk/res-auto"
+  android:orientation="vertical"
   android:layout_width="match_parent"
   android:layout_height="wrap_content"
-  xmlns:app="http://schemas.android.com/apk/res-auto">
+  android:padding="@dimen/half_margin"
+  >
 
-
-
-
-
-<!--  private final Spinner imageSpinner;-->
   <Spinner
     android:id="@+id/gallery_search_spinner"
-    android:layout_width="200dp"
-    android:layout_height="100dp"
+    android:layout_width="0dp"
+    android:layout_height="wrap_content"
     android:spinnerMode="dialog"
+    app:layout_constraintHorizontal_weight="1"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent"
+    app:layout_constraintEnd_toStartOf="@id/gallery_title"
     />
 
-  <!--  private final TextView title;-->
   <TextView
-    android:id="@+id/title"
-    android:layout_width="wrap_content"
+    android:id="@+id/gallery_title"
+    android:layout_width="0dp"
     android:layout_height="wrap_content"
     app:layout_constraintStart_toEndOf="@id/gallery_search_spinner"
     app:layout_constraintTop_toTopOf="parent"
-    android:layout_marginLeft="@dimen/basic_margin"
-    android:layout_marginTop="@dimen/basic_margin"
-    android:text="Image Title"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintHorizontal_weight="3"
+    android:text="@string/image_title"
     style="@style/TitleText"
-    android:textColor="@android:color/black"
     />
 
-  <!--  private final TextView description;-->
   <TextView
-    android:id="@+id/description"
-    android:layout_width="wrap_content"
+    android:id="@+id/gallery_description"
+    android:layout_width="0dp"
     android:layout_height="wrap_content"
-    app:layout_constraintStart_toEndOf="@id/gallery_search_spinner"
-    app:layout_constraintTop_toBottomOf="@id/title"
-    android:text="Image Description"
+    app:layout_constraintStart_toStartOf="@id/gallery_title"
+    app:layout_constraintTop_toBottomOf="@id/gallery_title"
+    app:layout_constraintEnd_toEndOf="@id/gallery_title"
+    android:text="@string/image_description"
     style="@style/Description"
-    android:layout_marginLeft="@dimen/basic_margin"
-    android:layout_marginTop="@dimen/basic_margin"
+    android:layout_gravity="start"
     />
-
-
-
 </androidx.constraintlayout.widget.ConstraintLayout>
